Callfire API client Changelog
=============================
Version 1.1.19 - Jun 13 2017
- added fromNumber to Recipient object for sending calls/texts
- added strictValidation flag for adding contacts to broadcast 
- added useCustomFields to createContactList/addContactListContacts apis
- added media array parameter for TextRecipient

Version 1.1.18 - May 29 2017
- upgraded dependencies

Version 1.1.17 - May 4 2017
- removed subscriptions api (not supported from v2 api client)
- fixed findWebhooks api to use enums instead strings
- trivial tests fixes

Version 1.1.16 - Mar 28 2017
- fixed DayOfWeek enum for scheduler

Version 1.1.15 - Jan 27 2017
- added dnc apis

Version 1.1.14 - Jan 17 2017
- added possibility to use client without config file

Version 1.1.13 - Dec 30 2016
- minor fixes for get contacts history api

Version 1.1.12 - Dec 28 2016
- updated CallRecord dto to include originateTime, answerTime, duration, callerName and switchId fields
- updated Webhook dto to include singleUse parameter
- minor extension of requests objects for upload and find sounds api, get contacts history api and find tollfree numbers api
- temporary turning dnc api off due to full remake of callfire dnc apis

Version 1.1.11 - Nov 18 2016
- added deleteCampaignSound api
- added getCreditsHistory api
- remove dnc lists api (not supported anymore)

Version 1.1.10 - Oct 26 2016
- added more parameters to call tracking config in Number Lease config object

Version 1.1.9 - Jul 11 2016
- added loading labels parameter in Number Lease objects

Version 1.1.8 - May 27 2016
- defaultLiveMessage, defaultMachineMessage, defaultLiveMessageSoundId, defaultMachineMessageSoundId, defaultVoice params added to send calls api
- added batch id filter parameter for get broadcast calls/texts
- added fields filter parameter for add sound via call, returns CampaignSound object
- added fields filter parameter for add sound via text-to-speech, returns CampaignSound object